Client Lourd/Sources/DLL/Interface/FacadeInterfaceNative.h

	__declspec(dllexport) void preparerUsineArbre(char* text, int length);
	__declspec(dllexport) void supprimerBille();
	__declspec(dllexport) bool spotLight(int lum, bool state);
	__declspec(dllexport) bool sourisEstSurObjet(int i, int j, int hauteur, int largeur, bool& estSelectionne);
	__declspec(dllexport) bool setProprietesNoeud(int x, int y, int angle, double scale);
	__declspec(dllexport) int obtenirAffichageGlobal();
	__declspec(dllexport) void bloquerAffichageGlobal(int active);