Client Lourd/Sources/InterfaceGraphique/FonctionsNatives.cs


        [DllImport(@"Noyau.dll", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAsAttribute(UnmanagedType.I1)]
        public static extern bool setProprietesNoeud(int x, int y, int angle, double scale);

        [DllImport(@"Noyau.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void supprimerBille();

        [DllImport(@"Noyau.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void modePause(bool pause);

        [DllImport(@"Noyau.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool spotLight(int lum, bool state);

        [DllImport(@"Noyau.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int obtenirAffichageGlobal();

        [DllImport(@"Noyau.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void bloquerAffichageGlobal(int active);

        [DllImport(@"Noyau.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool sourisEstSurObjet(int i, int j, int hauteur, int largeur, out bool estSelectionne);

        public static void populateUsines()
        {
            Console.WriteLine("Creation de l'arbre de rendu...");
            Program.loadingBar.populateLoadingBar();
        }

        [DllImport(@"Noyau.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void preparerUsineArbre(StringBuilder text, int length);
    }
}
